PLANET-2317 - Add fixed position for Carousel controls on mobile

--- a/assets/scss/common/_carousel.scss
+++ b/assets/scss/common/_carousel.scss
@@ -169,6 +169,8 @@
       .carousel-control-prev-icon,
       .carousel-control-next-icon {
         margin-bottom: 15vw;
+        position: absolute;
+        top: 150px;
       }
     }
 
